Fixed a bug of min-height overflow

--- a/css/main.less
+++ b/css/main.less
@@ -70,7 +70,7 @@ body {
   100% {background-position: 0px 0px;}
 }
 .huge-header {
-  min-height: 100%;
+  min-height: 600px;
   height: 100%;
   overflow: hidden;
   background: url(@headerBG) repeat;
